# cpp_benchmark

./: .clang-format  .clang-tidy  .configure_coverity.sh  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
appveyor/: gbenchmark_output.json  upload_gbenchmark_result.py  upload_googlebenchmark_result.py  upload_gtest_result.py
cmake/: compilation_flag.cmake  cppcheck_listing.csv  external.cmake  tools.cmake
experimental/benchmarks/: CMakeLists.txt
experimental/benchmarks/benchmarks/: bench_allocator.cpp  bench_atoi.cpp  bench_cache.cpp  bench_context_switch.cpp  bench_simd.cpp  bench_syscall.cpp  benchmark_atoi.cpp  benchmark_syscall.cpp
experimental/benchmarks/benchmarks/cache/: benchmark_array_of_array_traversal.cpp  benchmark_branch_prediction.cpp  benchmark_cache_associativity.cpp  benchmark_container_traversal.cpp  benchmark_matrix_traversal.cpp  benchmark_set_traversal.cpp  benchmark_stl_container_traversal.cpp  benchmark_structure_and_array.cpp
experimental/benchmarks/benchmarks/hashtable/: benchmark_cache_miss_fail_lookup.cpp  benchmark_cache_miss_lookup.cpp  benchmark_hash64.cpp  benchmark_insert_erase.cpp  benchmark_lookup.cpp  benchmark_lookup_with_cache_miss.cpp  hashtable_utils.h  hashtable_utils.hxx
experimental/benchmarks/benchmarks/threading/: benchmark_context_switch.cpp  benchmark_false_sharing.cpp
experimental/experimental/: CMakeLists.txt
experimental/experimental/allocators/: allocator_memory_pool_fixed_size.h  allocator_memory_pool_fixed_size.hxx  allocator_statistics.h  allocator_statistics.hxx  memory_block.h  memory_block.hxx  memory_pool_fixed_size.h  memory_pool_fixed_size.hxx  memory_pool_linear_growth.h  memory_pool_linear_growth.hxx  memory_resource_memory_pool_fixed_size.h  memory_resource_memory_pool_fixed_size.hxx  memory_resource_statistics.h  memory_resource_statistics.hxx
experimental/experimental/messages/: message.h  message_dispatcher.h  message_dispatcher.hxx  message_handler.h  message_handler.hxx
experimental/experimental/messages/default_messages/: ignore_message.h  ignore_message.hxx
experimental/experimental/network/: ethernet_frame.cpp  ethernet_frame.h  hex_dump.cpp  hex_dump.h  ipv4_header.cpp  ipv4_header.h  pcap_header.h  tcp_header.cpp  tcp_header.h  udp_header.h
experimental/experimental/properties/: al_enum_property.h  alphanumeric_enum_property.h  array_variable_size_property.h  array_variable_size_property.hxx  binary_coded_decimal_property.h  binary_coded_floating_point_property.h  byte_filler_property.h  floating_point_string_property.h  integer_string_property.h  integral_string_property.h  property.h  string_property.h  swap_endianness_property.h
experimental/experimental/utils/: bits.h  cache_information.cpp  cache_information.h  cache_information.hxx  macros.h  perf_event.cpp  perf_event.h  power_of_10_generator.h  traits.h  user_defined_literals.h  utils.h
experimental/tests/: CMakeLists.txt
experimental/tests/tests/: test_alignment.cpp  test_allocation_pattern_stl_gcc.cpp  test_allocator_memory_pool.cpp  test_bit_manipulation.cpp  test_class_detector.cpp  test_flat_hash_map.cpp  test_functor_type_erasure.cpp  test_message.cpp  test_message_dispatcher.cpp  test_message_layout.cpp  test_networking_epoll.cpp
experimental/tests/tests/data/: tcp.pcap  udp.pcap
experimental/tests/tests/libstd/: test_allocation_pattern_stl_libstd.cpp
experimental/tests/tests/network/: test_networking_epoll.cpp  test_pcap.cpp
experimental/tests/tests/properties/: test_binary_coded_decimal.cpp  test_binary_coded_floating_point.cpp  test_floating_point_string_property.cpp  test_integer_string_property.cpp  test_integral_string_property.cpp  test_string_property.cpp
experimental/tests/tests/utils/: allocator_statistics_checker.h  memory_checker.cpp  memory_checker.h  statistics_checker.cpp  statistics_checker.h  stats_allocator.h  stats_allocator.hxx
infos/: analysis_tools.md  big_picture.md  compiler_standard_library.md  general_knowledge.md  processor.md  syscall.md  tools.md
src/: bench_atoi.cpp  bench_cache.cpp  bench_context_switch.cpp  bench_itoa.cpp  bench_simd.cpp  bench_syscall.cpp  cache_information.cpp  cache_information.h  main.cpp  utils.h
src/benchmarks/: CMakeLists.txt
src/benchmarks/benchmarks/: bench_cache.cpp  bench_context_switch.cpp  bench_syscall.cpp
src/lib_common/: CMakeLists.txt
src/lib_common/allocators/: memory_pool_resource.h  memory_pool_resource.hxx
src/lib_common/utils/: cache_information.cpp  cache_information.h  perf_event.cpp  perf_event.h  utils.h  utils.hxx
src/tests/: CMakeLists.txt
src/tests/tests/: test_alignment.cpp  test_allocator.cpp
src/utils/: cache_information.h  cache_information.hxx  macros.h  perf_event.cpp  perf_event.h  traits.h  utils.h  utils.hxx
